rust/psibase_macros/psibase-macros-derive/tests/authorized/whitelist_without_level.stderr
error: whitelist in `my_fn` requires an explicit trust level (None, Low, Medium, High, Max). Use e.g. #[authorized(Medium, whitelist = [...])]
 --> tests/authorized/whitelist_without_level.rs:6:18
  |
6 |     #[authorized(whitelist = ["app"])]
  |                  ^^^^^^^^^
